tests/NormalTests/paczka1/small_fuzzy/39441997.err
Error in line 1: S909 A690 32,5
Error in line 6: BnB8ItCr0v A690 27,8
Error in line 16: Srlfn7PR A869 29,34
